# AtomicCounter

./: AtomicCount.cpp  CMakeLists.txt  README.md
AtomicCountPass/: AtomicCount.cpp  CMakeLists.txt
src/: CMakeLists.txt
test/: Makefile  test.c  test1.c
